[package]
name = "PetiteSorciereV2Rust"
version = "0.1.0"
authors = ["kiruan <alois.van@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "cache",
]
version = "0.9.0"